themes/tundra/layout/TabContainer.css
/* Tabs */

.tundra .dijitTabPaneWrapper {
	/*
	overflow: hidden;
	*/
	background:#fff;
	border:1px solid #ccc;
}

.tundra .dijitTab {
	line-height:normal;
	margin-right:5px;	/* space between one tab and the next in top/bottom mode */
	padding:0px;
	border:1px solid #ccc;
	background:#e2e2e2 url("../images/tabEnabled.png") repeat-x;
}

.tundra .dijitAlignLeft .dijitTab,
.tundra .dijitAlignRight .dijitTab {
	margin-right:0px;
	margin-bottom:5px;	/* space between one tab and the next in left/right mode */
}

.tundra .dijitTabInnerDiv {
	padding:6px 10px 4px 10px;
}

.tundra .dijitTabChecked .dijitTabInnerDiv {
	padding: 6px 10px 3px 10px;
	border-bottom: 1px solid #fff;
}

.tundra .dijitTabHover,
.tundra .dijitTabCloseButtonHover {
	color: #243C5F;
	border-top-color:#92a0b3;
	border-left-color:#92a0b3;
	border-right-color:#92a0b3;
	background:#e2e2e2 url("../images/tabHover.png") repeat-x;
}

.dj_ie6 .tundra .dijitTabHover,
.dj_ie6 .tundra .dijitTabCloseButtonHover {
	background-image: url("../images/tabHover.gif");
}

.tundra .dijitTabChecked,
.tundra .dijitTabCloseButtonChecked
{
	/* the selected tab (with or without hover) */
	background-color:#fff;
	border-color: #ccc;
	background-image:none;
}

/* make the active tab white on the side next to the content pane */
.tundra .dijitAlignTop .dijitTabChecked,
.tundra .dijitAlignTop .dijitTabCloseButtonChecked
{
	border-bottom-color:white;
	vertical-align:bottom;
}

.tundra .dijitAlignBottom .dijitTabChecked,
.tundra .dijitAlignBottom .dijitTabCloseButtonChecked
{
	border-top-color:white;
	-moz-border-radius:2px 2px 0px 0px;	/* eliminate some border detritrus on moz */
}

.tundra .dijitAlignLeft .dijitTabChecked,
.tundra .dijitAlignLeft .dijitTabCloseButtonChecked
{
	border-right-color:white;
}

.tundra .dijitAlignRight .dijitTabChecked,
.tundra .dijitAlignRight .dijitTabCloseButtonChecked
{
	border-left-color:white;
}


/* make space for a positioned close button */
.tundra .dijitTab .dijitClosable {
	position: relative;
	padding:6px 20px 4px 10px;
}

.tundra .dijitTab .dijitClosable .closeImage {
	position:absolute;
	top: 7px;
	right: 3px;
	height: 12px;
	width: 12px;
	padding: 0;
	margin: 0;
	background: url("../images/tabClose.png") no-repeat right top;
}
.dj_ie6 .dijitTab .dijitClosable .closeImage {
	background-image:url("../images/tabClose.gif");
}

.tundra .dijitTabCloseButton .dijitClosable .closeImage {
	background-image : url("../images/tabClose.png");
}
.dj_ie6 .tundra .dijitTabCloseButton .dijitClosable .closeImage {
	background-image : url("../images/tabClose.gif");
}

.tundra .dijitTabCloseButtonHover .dijitClosable .closeImage {
	background-image : url("../images/tabCloseHover.png");
}
.dj_ie6 .tundra .dijitTabCloseButtonHover .dijitClosable .closeImage {
	background-image : url("../images/tabCloseHover.gif");
}

.tundra .dijitAlignLeft .dijitTab .dijitClosable {
	padding:6px 10px 4px 20px;
}

/* correct for IE6.
    We cant force hasLayout as that blows out the shrink wrapped tabs
    ..so we shim in the closeImage position properties instead
*/
.dj_ie6 .tundra .dijitAlignLeft .dijitTab .dijitClosable .closeImage {
	left:-20px;
}

.tundra .dijitAlignBottom .dijitTab .dijitClosable .closeImage {
	top: auto;
	bottom: 7px;
	right: 3px;
}

.tundra .dijitAlignLeft .dijitTab .dijitClosable .closeImage {
	top: 7px;
	left: 3px;
}

